# PunyLM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_vocab.py
data/: vocab.txt
include/punylm/: attention.hpp  embeddings.hpp  layernorm.hpp  tensor.hpp  tokeniser.hpp
src/: CMakeLists.txt  attention.cpp  main.cpp  tokeniser.cpp
